[tool.poetry]
name = "thesis-project"
version = "0.1.0"
description = ""
authors = ["Aliaksandr Shcharbitski"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
dvc = {extras = ["gdrive"], version = "^3.50.1"}
matplotlib = "^3.8.4"
torchvision = "^0.18.0"
flax = ">=0.7.5"
clu = "^0.0.12"
jax = {extras = ["cpu"], version = "^0.4.28"}
wandb = "^0.17.0"
ipykernel = "^6.29.4"
flaxmodels = {git = "https://github.com/matthias-wright/flaxmodels.git"}
hydra-core = "^1.3.2"
hydra-optuna-sweeper = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
